--- a/src/content/blog/2025-06-24.md
+++ b/src/content/blog/2025-06-24.md
@@ -4,6 +4,7 @@ date: "2025-06-24"
 tags: ["採用"]
 summary: "採用面接で「結局、フィーリングで決めてしまった」「面接官によって評価がバラバラ」といった課題を感じていませんか？これらの課題を解決し、採用の精度を飛躍的に向上させる「構造化面接」という手法をご紹介します。"
 author: "市澤 樹享"
+thumbnail: "/2025-06-24.jpg"
 published: true
 ---
 
