--- a/src/content/blog/2025-07-06.md
+++ b/src/content/blog/2025-07-06.md
@@ -4,6 +4,7 @@ date: "2025-07-06"
 tags: ["採用","カジュアル面談"]
 summary: "カジュアル面談を実施したくても、コストを考えると二の足を踏んでしまう...。しかし、カジュアル面談は中長期な視点で考えるとメリットが大きいのでやらない手はないです。カジュアル面談導入のため手順をお伝えします。"
 author: "市澤 樹享"
+thumbnail: "/2025-07-06.png"
 published: true
 ---
 
