--- a/src/content/blog/2025-06-29.md
+++ b/src/content/blog/2025-06-29.md
@@ -3,7 +3,7 @@ title: "なぜ優秀な人材を採用できないのか？採用プロセスを
 date: "2025-06-29"
 tags: ["採用"]
 summary: "採用は6つのステージに分けられます。あなたの会社の課題はどこで発生していますか？ステージの概要とそこで起きた課題の解決方法についてお伝えします。"
-author: "市澤 樹享"
+author: "ウィズクロ"
 thumbnail: "/2025-06-29.jpg"
 published: true
 ---
