--- a/src/content/blog/2025-07-13.md
+++ b/src/content/blog/2025-07-13.md
@@ -3,7 +3,7 @@ title: "日本の中途採用、85%の企業が選考辞退を経験！無連絡
 date: "2025-07-13"
 tags: ["採用","辞退"]
 summary: "転職市場が活況を呈している昨今、企業の人事担当者の皆さんは「せっかく書類選考を通過した候補者に、面接前に辞退されてしまった」「面接当日に連絡もなく来なかった」という経験をお持ちではないでしょうか？実は、この現象は今や企業の「共通の悩み」となっています。最新の調査結果から見えてきた、選考辞退の深刻な実態をお伝えします。"
-author: "市澤 樹享"
+author: "ウィズクロ"
 thumbnail: "/2025-07-13.jpg"
 published: true
 ---
