--- a/src/content/blog/2025-07-27.md
+++ b/src/content/blog/2025-07-27.md
@@ -3,7 +3,7 @@ title: "採用ファネルを活用した戦略的採用活動のススメ"
 date: "2025-07-27"
 tags: ["採用","採用マーケティング"]
 summary: "人材確保が益々困難になる現代において、従来の「とりあえず求人を出して待つ」スタイルの採用活動では、優秀な人材を獲得することは難しくなっています。そこで注目されているのが、マーケティングの手法を採用活動に応用した「採用ファネル」という考え方です。本記事では、採用ファネルの基本概念から実践的な活用方法まで、詳しく解説していきます。"
-author: "市澤 樹享"
+author: "ウィズクロ"
 thumbnail: "/2025-07-27.png"
 published: true
 ---
