--- a/src/content/blog/2025-08-03.md
+++ b/src/content/blog/2025-08-03.md
@@ -3,7 +3,7 @@ title: "中途採用面接前リマインドの最適化ガイド"
 date: "2025-08-03"
 tags: ["リマインド","面接"]
 summary: "中途採用において、面接のドタキャンや候補者の離脱は企業にとって深刻な課題です。しかし、適切なリマインド戦略により、この問題を大幅に改善できることが明らかになっています。"
-author: "市澤 樹享"
+author: "ウィズクロ"
 thumbnail: "/2025-08-03.png"
 published: true
 ---
