--- a/src/content/blog/2025-09-21.md
+++ b/src/content/blog/2025-09-21.md
@@ -3,7 +3,7 @@ title: "飲食店にホームページは本当に必要？SNSだけでは足り
 date: "2025-09-21"
 tags: ["集客"]
 summary: "近年、InstagramやTwitter、TikTokなどのSNSが普及し、多くの飲食店がSNSを活用した集客に力を入れています。「SNSで十分じゃないの？わざわざホームページを作る必要ある？」と疑問に思う経営者の方も多いのではないでしょうか。確かにSNSは強力な集客ツールですが、飲食店の成功には「ホームページ」も欠かせない要素です。今回は、なぜ飲食店にホームページが必要なのか、その理由を詳しく解説します。"
-author: "市澤 樹享"
+author: "ウィズクロ"
 thumbnail: "/2025-09-21.png"
 published: true
 ---
